...
    }()
    
    lazy var editButton: UIButton = {
        let button = UIButton()
        button.backgroundColor = Theme.current.buttonBackground
        button.layer.cornerRadius = 15
        button.setTitle("Edit", for: .normal)
        button.setTitleColor(.darkGray, for: .normal)
        button.setTitleColor(.lightGray, for: .highlighted)
        button.titleLabel?.font = .boldSystemFont(ofSize: 22)
        button.addTarget(self, action: #selector(editProfile), for: .touchUpInside)
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
...
        button.layer.cornerRadius = 15
        button.setTitleColor(.darkGray, for: .normal)
        button.setTitleColor(.lightGray, for: .highlighted)
        button.titleLabel?.font = .boldSystemFont(ofSize: 15)
        button.addTarget(self, action: #selector(saveGCD), for: .touchUpInside)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setTitle("Save", for: .normal)
        button.isHidden = true
        return button
    }()
    lazy var cancelButton: UIButton = {
        let button = UIButton()
        button.setTitle("Cancel", for: .normal)
...
        }
        disableButton(state: formIsValid)
    }
    
    private func showAlert(state: Bool = true) {
        let alertView = UIAlertController(title: nil, message: "Данные сохранены", preferredStyle: .alert)
        let doneAction = UIAlertAction(title: "Ok", style: .default, handler: {[weak self]  _ in
            guard let self = self else {return}
            self.enableEditMode(state: false)
        })
        alertView.addAction(doneAction)
        let errorAlert = UIAlertController(title: "Ошибка", message: "Не удалось сохранить данные", preferredStyle: .alert)
        let repetAction = UIAlertAction(title: "Повторить", style: .destructive) {[weak self] _ in
...
