...
            newUser.city = profile.cityTextfield.text
        }
        return newUser
    }
    
    private func showAlert(state: Bool = true) {
        let alertView = UIAlertController(title: "!!!", message: "Данные сохранены", preferredStyle: .alert)
        let doneAction = UIAlertAction(title: "Ok", style: .default, handler: {[weak self]  _ in
            self?.profile.enableEditMode(state: false)
        })
        alertView.addAction(doneAction)
        let errorAlert = UIAlertController(title: "Ошибка", message: "Не удалось сохранить данные", preferredStyle: .alert)
        let repetAction = UIAlertAction(title: "Повторить", style: .destructive) {[weak self] _ in
...
